--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <style>
       *{
-        font-family: "Roboto", sans-serif;
+        font-family: "Montserrat", sans-serif;
       }
     </style>
     <title>Game Recommendation Service</title>
